--- a/index.css
+++ b/index.css
@@ -1,5 +1,13 @@
 body {
   padding-bottom: 200px;
+  margin: 0;
+  font-family: "Merriweather", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #ffffff;
+  text-align: left;
+  background-color:#212529;
 }
 
 a.navbar-brand {
@@ -13,10 +21,80 @@ a.navbar-brand {
 }
 
 .navbar{
-  margin-bottom: 100px;
+  margin-bottom: 0px;
   font-size: 15px;
-  text-align: left;
+  text-align: right;
 }
 nav{
+  font-size: 50px; 
+}
+nav ul {
+margin-bottom: 0px;
+padding-bottom: 0px;
+}
+
+section{
+  background-color: #212529;
+  color:#7D8A97;
+  padding-top: 10rem;
+  padding-bottom: calc(10rem - 4.5rem);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size:cover;
+}
+
+h1.fw-light{
+  color:#fff;
   font-size: 50px;
+}
+p.lead{
+  color:#7D8A97;
+
+}
+
+a.btn{
+  background-color:#EC407A;
+  border-color: #212121;
+  color:#fff;
+  font-size: 20px;
+}
+/*Header*/
+header{
+  padding-top:0px;
+}
+
+header.masthead {
+  padding-top: 10rem;
+  padding-bottom: calc(10rem - 4.5rem);
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("https://wallpapercave.com/wp/wp4194138.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+}
+header.masthead h1 {
+  font-size: 2.25rem;
+}
+@media (min-width: 992px){ 
+  header.masthead {
+    height: 100vh;
+    min-height: 40rem;
+    padding-top: 4.5rem;
+    padding-bottom: 0;
+  }
+  header.masthead p {
+    font-size: 35px;
+  }
+  header.masthead a {
+    font-size: 25px;
+  }
+  header.masthead h1 {
+    font-size: 3rem;
+  }
+}
+@media (min-width: 1200px) {
+  header.masthead h1 {
+    font-size: 3.5rem;
+  }
 }
